revert 08c190a76ef49a66ce2d0286b73a83bf3e6359a6

--- a/dic/ideo/pubdic/Makefile.am
+++ b/dic/ideo/pubdic/Makefile.am
@@ -9,6 +9,8 @@ noinst_PROGRAMS = pod
 pod_SOURCES = pod.c
 pod_LDADD = ../../../lib/RK/libRK.la ../../../lib/RKindep/libRKindep.la
 
+PUBDICS = a.p k.p s.p t.p n.p h.p m.p y.p r.p w.p x.p
+
 iroha.t: $(PUBDICS) ProgramTargetName(pod)
 	cat $(PUBDICS) | ./pod - -p -i -2 > iroha.spl
 	$(MERGE) < iroha.spl > iroha.t
