--- a/lib/RK/Makefile.am
+++ b/lib/RK/Makefile.am
@@ -7,3 +7,7 @@ libRK_la_SOURCES = dicsw.c permdic.c tempdic.c ngram.c \
     nword.c dic.c util.c kana.c \
     bits.c dd.c fq.c widechar.c
 libRK_la_LDFLAGS = -static
+
+man3_MANS = RkBgnBun.man RkDefineDic.man RkDeleteDic.man RkEndBun.man \
+    RkEnlarge.man RkFinalize.man
+
