--- a/config.h.in
+++ b/config.h.in
@@ -169,11 +169,17 @@
 /* Define to the address where bug reports for this package should be sent. */
 #undef PACKAGE_BUGREPORT
 
+/* Package localstate directory. */
+#undef PACKAGE_LOCALSTATE_DIR
+
 /* Define to the full name of this package. */
 #undef PACKAGE_NAME
 
 /* Define to the full name and version of this package. */
 #undef PACKAGE_STRING
+
+/* Configuration directory of the package. */
+#undef PACKAGE_SYSCONF_DIR
 
 /* Define to the one symbol short name of this package. */
 #undef PACKAGE_TARNAME
