Use PACKAGE_LOCALSTATE_DIR and PACKAGE_SYSCONF_DIR.

--- a/dic/ideo/grammar/Makefile.am
+++ b/dic/ideo/grammar/Makefile.am
@@ -1,5 +1,5 @@
 
-# localstatedir = ${prefix}/var
+# default localstatedir = ${prefix}/var
 dicdir = ${localstatedir}/canna/dic
 dist_dic_DATA = fuzokugo.cbd
 
