Remove old SVR4 gettxt(). cmd/forcpp finished.

--- a/cmd/forcpp/Makefile.am
+++ b/cmd/forcpp/Makefile.am
@@ -1,6 +1,8 @@
 
 AM_CFLAGS = -I$(top_srcdir) -I$(top_srcdir)/lib
 
+# kpdic コマンドに渡す前に, cpp コマンドの前後で forcpp -7, forcpp -8 コマンド
+# を通す.
 bin_PROGRAMS = forcpp
 
 forcpp_SOURCES = forcpp.c
