wip: ソケット通信の点検。

--- a/cmd/mkbindic/Makefile.am
+++ b/cmd/mkbindic/Makefile.am
@@ -4,4 +4,4 @@ AM_CFLAGS = -I$(top_srcdir) -I$(top_srcdir)/lib
 bin_PROGRAMS = mkbindic$(EXEEXT)
 
 mkbindic$(EXEEXT): mkbindic.cpp
-	$(CPP) $< -o $@ -I../..
+	$(CANNA_PP) $< -o $@ -I../..
