--- a/cmd/mkromdic/Makefile.am
+++ b/cmd/mkromdic/Makefile.am
@@ -4,5 +4,5 @@ AM_CFLAGS = -I$(top_srcdir) -I$(top_srcdir)/lib
 bin_PROGRAMS = mkromdic$(EXEEXT)
 
 mkromdic$(EXEEXT): mkromdic.cpp
-	$(CPP) $< -o $@ -I../..
+	$(CANNA_PP) $< -o $@ -I../..
 
