--- a/misc/Makefile.am
+++ b/misc/Makefile.am
@@ -1,4 +1,5 @@
 
-cannadir = ${localstatedir}/lib/canna
+# /etc/canna/default.canna -> EPEL 版と同じ.
+cannadir = ${sysconfdir}/canna
 dist_canna_DATA = default.canna
 
